# differential

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  setup-dev.sh
.claude/: settings.json
.claude/hooks/: pyright_check.sh  ruff_check.sh
.claude/skills/: write-tests.md
frontend/: openapi.json  pnpm-lock.yaml
frontend/src/api/: index.ts  types.gen.ts
frontend/src/app/: page.tsx
prompts/: prioritization.md
scripts/: generate-api-types.sh  run_call.py
src/differential/: calls.py  chat.py  context.py  database.py  executor.py  llm.py  mapper.py  models.py  move_models.py  orchestrator.py  parser.py  settings.py  sources.py  summary.py  trace_events.py  tracer.py  workspace_map.py
src/differential/api/: app.py  schemas.py
src/differential/calls/: __init__.py  assess.py  common.py  dispatches.py  ingest.py  prioritization.py  scout.py
src/differential/moves/: base.py  change_link_role.py  create_claim.py  create_concept.py  create_judgement.py  create_question.py  create_wiki_page.py  flag_funniness.py  link_child_question.py  link_consideration.py  link_related.py  (+6 more)
src/rumil/: database.py  models.py
supabase/: config.toml
supabase/migrations/: 20260307040008_init_schema.sql  20260307042723_test_schema.sql  20260308010000_add_trace_json.sql  20260314005706_change_link_role_default_to_direct.sql
tests/: conftest.py  test_agent_loop.py  test_api.py  test_create_call.py  test_dispatch_types.py  test_investigate.py  test_move_state.py  test_move_types.py  test_resolve_load_requests.py  test_run_call.py  test_workspace_isolation.py
(+7 files in other folders)
