[project]
name = "differential"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
pdf = [
    "pypdf>=6.7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/differential"]
